# homework

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  test.csv
functional_tests/: gen_people.py  main.py  names.py  test_cases.py
src/: io.rs  lib.rs  log.rs  main.rs  person.rs  serialization.rs  sort_direction.rs  sorting.rs  struct_fields.rs
src/api/: filters.rs  handlers.rs  models.rs
src/api/filters/: mod.rs  tests.rs
src/person/: mod.rs  tests.rs
