[package]
name = "homework"
version = "0.1.0"
authors = ["Tom Brennan <tjb1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
csv = "1.1.6"
serde = { version = "1.0.126", features = ["derive"] }
