[package]
name = "homework"
version = "0.1.0"
authors = ["Tom Brennan <tjb1982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
csv = "1.1.6"
serde = { version = "1.0.126", features = ["derive"] }
clap = "3.0.0-beta.2"
log4rs = { version = "1.0.0", features = ["ansi_writer"] }
chrono = "0.4.19"
tokio = { version = "1.6.0", features = ["full"] }
warp = "0.3"

futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
hyper = "0.13"
serde_json = "1.0"
route-recognizer = "0.2"
bytes = "0.5"
async-trait = "0.1"